--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,24 @@
     width: 100%;
     height: 100%;
 }
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #f5f5f5;
+    text-align: center;
+
+    ul {
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        padding: 0;
+        li {
+            margin: 0 10px;
+        }
+    }
+}
 
 .centered {
     position: fixed;
