--- a/styles/index.css
+++ b/styles/index.css
@@ -17,6 +17,15 @@
         padding: 0;
         li {
             margin: 0 10px;
+
+            a {
+                text-decoration: none;
+                color: #000000;
+
+                &:hover {
+                    color: #00ff00;
+                }
+            }
         }
     }
 }
