--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f5f5f5;
+    color: #000000;
+}
+
 .root {
     width: 100%;
     height: 100%;
